fix column autoeval

--- a/src/Admin/UserBundle/Resources/views/Default/periods.html.twig
+++ b/src/Admin/UserBundle/Resources/views/Default/periods.html.twig
@@ -23,7 +23,8 @@
                     <th>Id</th>
                     <th>Periodo Académico</th>
                     <th>Eventos académicos</th>
-                    <th>Autoevaluación</th>
+                    <th>{% if isdc %} Autoevaluación {% endif %}
+                    </th>
                     <th>Seleccionar</th>
                 </tr>
                 </thead>
@@ -44,7 +45,7 @@
                     <td>{{ periodoe.fechainicio | date('Y-m-d') }} al
                         {{ periodoe.fechafin | date('Y-m-d') }}</td>
                     <td>
-                        {% if isdc and periodoe.dias > 0 %} Si aplica {% else %} No Aplica {% endif %}
+                        {% if isdc %} {% if periodoe.dias > 0 %} Si aplica {% else %} No aplica {% endif %} {% endif %}
                     </td>
                     <td>
                         <a href="{{ path('home_user_periodo_select', {'id':periodoe.id}) }}" class="btn btn-primary btn-xs">Seleccionar <i class="fa fa-sign-in"></i></a>
