--- a/app/Resources/views/Programa/addlider.html.twig
+++ b/app/Resources/views/Programa/addlider.html.twig
@@ -1,5 +1,5 @@
 {% extends '::basepop.html.twig' %}
-{% block body -%}         
+{% block body -%}
   <!-- NEW WIDGET START -->
 		<article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
@@ -20,7 +20,7 @@
 				-->
 				<header>
 					<span class="widget-icon"> <i class="fa fa-table"></i> </span>
-					<h2>Docentes de la escuela </h2>
+					<h2>Selecionar docente de escuela del periodo {{ periodo.observaciones }}</h2>
 
 				</header>
 
@@ -39,9 +39,9 @@
 						<div class="widget-body-toolbar">
 
 						</div>
-						
+
 						<table id="dt_basic" class="table table-striped table-bordered table-hover">
-              
+
         <thead>
             <tr>
                 <th>Cédula</th>
@@ -77,7 +77,7 @@
 
 			</div>
 			<!-- end widget -->
- 
+
 <script>
 function select_item(item)
 {
