add lider to prog-per

--- a/app/Resources/views/Programa/index.html.twig
+++ b/app/Resources/views/Programa/index.html.twig
@@ -56,7 +56,7 @@
                       <td>{{ entity.programa.nivel }}</td>
                 <td>{{ entity.programa.nombre }}</td>
                 <td>{{ entity.programa.escuela? entity.programa.escuela.sigla : 'sin' }}</td>
-                <td>{{ entity.lider? entity.lider : 'no registrado' }}</td>
+                <td>{{ entity.lider? entity.lider.id : 'no registrado' }}</td>
 
 
 
