add periodo to coeval director

--- a/src/Admin/UnadBundle/Resources/views/Docente/detalle.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/detalle.html.twig
@@ -4,7 +4,7 @@
     <th>Nombre</th>
     <td>{{ entity.user.nombres }} {{ entity.user.apellidos }}</td>
     <th>Periodo de Evaluación</th>
-    <td>{{entity.periodo}} ({{ periodo.observaciones }})</td>
+    <td>{{entity.periodo}}</td>
   </tr>
 
   <tr>
