--- a/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
@@ -139,7 +139,7 @@
                 <td>Evaluación del lider a los directores de curso</td>
                 <td>
                     {% if instrumentos[4].estado %}
-                        <a href="{{ path('docente_coevaldirector') }}" class="btn btn-primary btn-xs">Ingresar <i
+                        <a href="{{ path('docente_coevaldirector', { 'id': periodo.id }) }}" class="btn btn-primary btn-xs">Ingresar <i
                                     class="fa fa-sign-in"></i></a>
                     {% endif %}
                 </td>
