add did show user info

--- a/src/Admin/UserBundle/Resources/views/User/info.html.twig
+++ b/src/Admin/UserBundle/Resources/views/User/info.html.twig
@@ -21,6 +21,10 @@
                 <th>Roles</th>
                 <td>{% for roles in app.user.getUserRoles() %} {{roles.descripcion}}, {% endfor %}</td>
             </tr>
+            <tr>
+                <th>DID</th>
+                <td>{{ app.session.get('docenteid') }}</td>
+            </tr>
         </tbody>
     </table>
 {% endblock %}
