--- a/src/Admin/MedBundle/Resources/views/coevalDirector/index.html.twig
+++ b/src/Admin/MedBundle/Resources/views/coevalDirector/index.html.twig
@@ -1,9 +1,9 @@
 {% extends '::base.html.twig' %}
 {% block body -%}
 <a href="{{ path('docente_show', {'id': app.session.get('docenteid') }) }}"> << Regresar</a>
-<h1>Evaluación a Directores de Curso</h1>
+<h1>Evaluación a Directores de Curso del periodo seleccionado:</h1>
 <h3>
-    Importante: Si un docente fue director de uno o más cursos en uno o más períodos académicos y su valoración es la misma, solo es necesaria una evaluación, de lo contrario, evalúe cada uno de los cursos independientes.
+    Importante: Si un docente fue director de uno o más cursos y su valoración es la misma, solo es necesaria una evaluación, de lo contrario, evalúe cada uno de los cursos independientes.
 </h3>
       <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
         <thead>
@@ -15,8 +15,8 @@
         </thead>
         <tbody>
        {%set var = '123'%}
-            
-            {%for oferta in ofertas%}        
+
+            {%for oferta in ofertas%}
             {%if oferta.director.user.id != var  %}
             <tr>
                 <th colspan = 2>{{oferta.director.user.nombres}} {{oferta.director.user.apellidos}}</th>
@@ -24,15 +24,15 @@
                <tr>
                 <td></td>
                 <td>{{oferta.curso.id}} - {{oferta.curso.nombre}} - {{oferta.periodo}}</td>
-                   <td>  
-               {%if app.session.get('docenteid') == oferta.director.id %} 
+                   <td>
+               {%if app.session.get('docenteid') == oferta.director.id %}
                    No aplica *
-               {%else%}   
+               {%else%}
                 {%if oferta.coeval %}
                {%if oferta.coeval.f0 %}
                {{oferta.coeval.f0}}
                 {%else%}
-                <a href="{{ path('coevaldirector_edit', { 'id': oferta.id }) }}">Evaluar...</a>   
+                <a href="{{ path('coevaldirector_edit', { 'id': oferta.id }) }}">Evaluar...</a>
                 {%endif%}
                 {%else%}
                 <a href="{{ path('coevaldirector_edit', { 'id': oferta.id }) }}">Evaluar...</a>
@@ -41,20 +41,20 @@
                  </td>
                </tr>
                {%set var =  oferta.director.user.id %}
-               
+
               {%else%}
                 <tr>
                 <td></td>
                 <td>{{oferta.curso.id}} - {{oferta.curso.nombre}} - {{oferta.periodo}}</td>
-                <td> 
-               {%if app.session.get('docenteid') == oferta.director.id %} 
+                <td>
+               {%if app.session.get('docenteid') == oferta.director.id %}
                    No aplica *
-               {%else%}   
+               {%else%}
                 {%if oferta.coeval %}
                {%if oferta.coeval.f0 %}
                {{oferta.coeval.f0}}
                 {%else%}
-                <a href="{{ path('coevaldirector_edit', { 'id': oferta.id }) }}">Evaluar...</a>   
+                <a href="{{ path('coevaldirector_edit', { 'id': oferta.id }) }}">Evaluar...</a>
                 {%endif%}
                 {%else%}
                 <a href="{{ path('coevaldirector_edit', { 'id': oferta.id }) }}">Evaluar...</a>
@@ -63,9 +63,9 @@
                  </td>
                </tr>
                {%endif%}
-               
-               
-               
+
+
+
             {%endfor%}
         </tbody>
     </table>
