--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -136,6 +136,7 @@
                 <ul style="display: block;">
                     <li>
                         <a href="{{ path('escuela_info') }}"><i class="fa fa-book"></i> Mi Escuela</a>
+                        <a href="{{ path('home_user_periodo') }}">Seleccionar periodo 2022</a>
                     </li>
                 </ul>
             <li>
@@ -157,6 +158,7 @@
                     <ul style="display: block;">
                         <li>
                             <a href="{{ path('escuela_info') }}"><i class="fa fa-book"></i> Mi Escuela</a>
+                            <a href="{{ path('home_user_periodo') }}">Seleccionar periodo 2022</a>
                         </li>
                     </ul>
 
@@ -169,7 +171,7 @@
                 <ul style="display: block;">
                     <li>
                         <a href="{{ path('home_user_inicio') }}">Periodo en curso</a>
-                        <a href="{{ path('home_user_periodo') }}">Periodos vigencia 2022</a>
+                        <a href="{{ path('home_user_periodo') }}">Seleccionar periodo 2022</a>
                         <a href="{{ path('archivo_docente') }}">Archivo</a>
                     </li>
                 </ul>
