--- a/src/Admin/MedBundle/Resources/views/Plangestion/show.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/show.html.twig
@@ -67,7 +67,7 @@
                             {% endif %}
                         </td>
                         <td>
-                            {% if actividad.autoevaluacion is not null %}
+                            {% if actividad.autoevaluacion is not null and not actividad.plang.autoevaluacion %}
                                 <a data-toggle="modal"
                                    href="{{ path('actividadplang_borrar', { 'id': actividad.id }) }}"
                                    data-target="#myModal" class="btn btn-default btn-xs txt-color-red"><i
