--- a/src/Admin/MedBundle/Resources/views/Plangestion/autoeval.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/autoeval.html.twig
@@ -61,7 +61,7 @@
                 </td>
                 <td>
                     {% if actividad.path %}
-                        {% if entity.vinculacion == 'DC' %}
+                        {% if entity.vinculacion == 'De Carrera' %}
                             <a href="../../../{{ actividad.webpath|replace({'uploads':repo}) }}" target="_blank"><i class="fa fa-download"></i>Ver...</a>
                         {% else %}
                             <a href="../../../{{ actividad.webpath }}" target="_blank"><i class="fa fa-download"></i>Ver...</a>
