--- a/src/Admin/UserBundle/Resources/views/Default/periods.html.twig
+++ b/src/Admin/UserBundle/Resources/views/Default/periods.html.twig
@@ -36,7 +36,7 @@
                         {{ periodoe.id }}
                     </td>
                     <td>
-                        {% if isdc and periodoe.dias > 0 %}
+                        {% if isdc and periodoe.dias == '20221' %}
                             Primer semestre
                         {% else %}
                             {{ periodoe.observaciones }}
