--- a/src/Admin/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/Admin/UserBundle/Resources/views/Default/index.html.twig
@@ -27,7 +27,7 @@
 
     <div class="col-sm-12 col-md-12 col-lg-6">
         <div class="well">
-            <h1 class="txt-color-orangeDark login-header-big">Admin</h1>
+            <h1 class="txt-color-orangeDark login-header-big">Acceso simulado</h1>
 
             {% if is_granted('ROLE_ADMIN') %}
                 <form method="get" action="?php echo $_GET['_quieroser'];?" >
