--- a/app/Resources/views/Escuela/info.html.twig
+++ b/app/Resources/views/Escuela/info.html.twig
@@ -26,13 +26,19 @@
                 <td>{{ entity.secretaria ? entity.secretaria.username~' '~entity.secretaria.nombres~' '~entity.secretaria.apellidos  : 'SIN' }}</td>
             </tr>
             <tr>
-                <th>Docentes</th>
+                <th>Docentes por periodo vigencia {{ year }}</th>
                 <td>
-               Periodos de evaluación:
-
-                {%for periodo in periodos %}
-                     <a  href="{{ path('docente_escuela', { 'id': entity.id , 'periodo': periodo.id }) }}">{{ periodo.id }}</a>
+                {%for periodo in periodosp %}
+                    <a class="btn btn-primary btn-sm" href="{{ path('docente_escuela', {'id': entity.id, 'periodo': periodo.id }) }}">{{periodo.year}} {{ periodo.observaciones }}</a>
                       {%endfor%}
+                </td>
+            </tr>
+            <tr>
+                <th>Docentes por periodo consolidado</th>
+                <td>
+                    {%for periodo in periodos %}
+                        <a class="btn btn-primary btn-sm" href="{{ path('docente_escuela', {'id': entity.id, 'periodo': periodo.id }) }}">{{ periodo.observaciones }}</a>
+                    {%endfor%}
                 </td>
             </tr>
              <th>Cursos</th>
