--- a/src/Admin/UnadBundle/Resources/views/Docente/show-dc.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/show-dc.html.twig
@@ -13,7 +13,7 @@
         </ul>
     {% endif %}
 
-    <h4>3. Instrumentos de Evaluación</h4>
+    <h4>3. Instrumentos de Evaluación DC</h4>
     <table class="table table-bordered hidden-mobile" style="width: 95%">
         <tr>
             <th>Instrumento</th>
@@ -228,7 +228,7 @@
         </tr>
 
     </table>
-
+    tw:show-dc
     <div class="alert alert-info alert-block">
 
         <h4 class="alert-heading">Ayuda y Soporte:</h4>
