add mensaje de no otras actividades

--- a/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
@@ -42,7 +42,11 @@
         </tr>
         </tbody>
     </table>
-
+    <div class="alert alert-info alert-block">
+        <h4 class="alert-heading">IMPORTANTE:</h4>
+        Por disposición de la Gerencia de Talento y la Vicerrectoría académica el proceso de autoevaluación se debe realizar solamente por roles de formación : Tutor, Director, Consejero y Componente Práctico.
+        En caso de no tener ninguno de los roles anteriores se asigna el Rol “Otras Actividades”.
+    </div>
     </table>
     <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
         <thead>
