Acceso a evidencias DOFE

--- a/app/Resources/views/Dofe/calificar.html.twig
+++ b/app/Resources/views/Dofe/calificar.html.twig
@@ -26,10 +26,10 @@
                 </td>
             </tr>
             <tr>
-                <td>Evidencia:</td>
+                <td>Evidencia:</td>git
                 <td>
                     {% if actividad.path %}
-                        <a href="../../../{{ actividad.webpath }}" target="_blank"
+                        <a href="../../../{{ actividad.webpathrepo }}" target="_blank"
                            class="btn btn-default btn-xs txt-color-green"><i class="fa fa-download"></i> Ver
                             evidencia... </a>
                     {% endif %}
