update autoeval add roles

--- a/src/Admin/UserBundle/Resources/views/Default/periods.html.twig
+++ b/src/Admin/UserBundle/Resources/views/Default/periods.html.twig
@@ -16,7 +16,7 @@
 
     <div class="col-sm-12">
         <div class="well">
-            <h1 class="txt-color-orangeDark login-header-big">Periodos académicos que hacen parte de la evaluación {{ year }} </h1>
+            <h1 class="txt-color-orangeDark login-header-big">Periodos académicos activos para evaluación docente. </h1>
             <table class="table table-bordered hidden-mobile" style="width: 100%">
                 <thead>
                 <tr>
