--- a/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 {% block body -%}
-    <h3>Roles Asignación Académica de: {{ entity.docente.user.nombres }} {{ entity.docente.user.apellidos }}
+    <h3>Roles para autoevaluación : {{ entity.docente.user.nombres }} {{ entity.docente.user.apellidos }}
         : {{ entity.docente.user.id }}</h3>
 
     <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
@@ -18,25 +18,21 @@
             <td colspan="2">
                 <h5>Apreciado Docente Ocasional y Hora Cátedra:</h5>
                 <ul>
-                    <li>La siguiente es la asignación académica suministrada por Talento Humano.</li>
-                    <li>Para todos los roles las actividades se asignan automáticamente y estas no se pueden
-                        modificar.
+                    <li>Los roles registrados para autoevaluación son suministradados por Talento Humano (SOCA).</li>
+                    <li>Los roles de formación (Tutor / Director de Curso) que no apararezcan en este registro y usted desempeño puede agregarlos con el bóton "Agregar".
                     </li>
-                    <li>La autoevaluación se realiza por el desempeño en general de cada rol durante el periodo de
-                        evaluación (semestre) que puede incluir uno o varios períodos académicos.
+                    <li>La autoevaluación se realiza por el desempeño en general de cada rol durante el periodo académico.
                     </li>
                 </ul>
-                    <h5>Importante antes de confirmar su asignación:</h5>
-                    <ul>
-                        <li>Si considera que los roles de formación (Tutor / Director de Curso) no corresponden a su
-                            asignación por favor envíe un correo a "siga@unad.edu.co" indicando porque.
-                        </li>
-                        <li>Si tiene registradas “Otras Actividades” y estas no corresponden debe aceptar el registro y
-                            luego seleccionar la opción “No Aplica” y escribir una observación.
-                        </li>
-                        <li>Si considera que no tiene registrada alguna actividad para auto evaluación, acepte el registro y al finalizar el registro indique en observaciones qué actividad no autoavalúo.
-                        </li>
-                    </ul>
+                <h5>Importante antes de confirmar su asignación:</h5>
+                <ul>
+                    <li>Si tiene registradas “Otras Actividades” y estas no corresponden debe aceptar el registro y
+                        luego seleccionar la opción “No Aplica” y escribir una observación.
+                    </li>
+                    <li>Si considera que no tiene registrada alguna actividad para auto evaluación, acepte el registro y
+                        al finalizar el registro indique en observaciones qué actividad no autoavalúo.
+                    </li>
+                </ul>
 
             </td>
         </tr>
@@ -44,14 +40,60 @@
     </table>
     <div class="alert alert-info alert-block">
         <h4 class="alert-heading">IMPORTANTE:</h4>
-        Por disposición de la Gerencia de Talento y la Vicerrectoría académica el proceso de autoevaluación se debe realizar solamente por roles de formación : Tutor, Director, Consejero y Componente Práctico.
+        Por disposición de la Gerencia de Talento y la Vicerrectoría académica el proceso de autoevaluación se debe
+        realizar solamente por roles de formación : Tutor, Director, Consejero y Componente Práctico.
         En caso de no tener ninguno de los roles anteriores se asigna el Rol “Otras Actividades”.
     </div>
+    <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
+        <thead>
+        <tr>
+            <th colspan="3">Agregar roles de formación</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        <tr>
+            <td>
+                1. Tutor
+            </td>
+            <td>
+                Agregar Rol de Tutor para autoevaluación en caso que usted desempeño el rol y no esta en el listado.
+            </td>
+            <td>
+                {% if estutor %}
+                    Agregado
+                {% else %}
+                    <a href="{{ path('plangestion_conf_add', { 'id': 1 }) }}" class="btn btn-primary btn-xs"><i
+                                class="fa fa-plus"></i> Agregar</a>
+                {% endif %}
+            </td>
+        <tr>
+            <td>
+                2. Director
+            </td>
+            <td>
+                Agregar Rol de Director para autoevaluación en caso que usted desempeño el rol y no esta en el listado.
+            </td>
+            <td>
+                {% if esdirector %}
+                    Agregado
+                {% else %}
+                    <a href="{{ path('plangestion_conf_add', { 'id': 2 }) }}" class="btn btn-primary btn-xs"><i
+                                class="fa fa-plus"></i> Agregar</a>
+                {% endif %}
+            </td>
+        </tr>
+        </tr>
+        <tr>
+        </tr>
+        </tbody>
+    </table>
+    <br>
     </table>
     <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
         <thead>
         <tr>
-            <th>Rol</th>
+            <th>Roles en el MED para autoevaluación del periodo {{ periodo.observaciones }}</th>
         </tr>
         </thead>
         <tbody>
@@ -86,8 +128,6 @@
         </tbody>
     </table>
     <br>
-    <br>
-
     <div class="modal fade" data-refresh="true" id="ModalCerrar" tabindex="-1" role="dialog"
          aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm">
